welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:9: error: not found: value vacantion
		if ((day==6 || day==0) && vacantion==false)
                                          ^alarmClock:21: error: not found: value vacantion
				if ((day==6 || day==0) && vacantion==false)
                                                          ^alarmClock:21: error: type mismatch;
 found   : Unit
 required: String
				if ((day==6 || day==0) && vacantion==false)
                                ^